Fix layout issues

--- a/index.scss
+++ b/index.scss
@@ -85,13 +85,13 @@ input:focus {
 .col {
     display: flex;
     flex-direction: column;
-    gap: 0.125rem;
+    gap: 0.1em;
 }
 
 .row {
     display: flex;
     flex-direction: row;
-    gap: 0.125rem;
+    gap: 0.1em;
 }
 
 .expand-x {
